# phoebe-compute

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  CMakeSettings.json
include/: Console.h  CreatePolyData.h  Frame.h  Mesh.h  MeshLoader.h  MeshMakerDB.h  MeshMakerIO.h  PolyMaker.h  QuickView.h  SmoothPolyData.h
src/: Console.cpp  CreatePolyData.cpp  Mesh.cpp  MeshLoader.cpp  MeshMaker.cpp  MeshMakerDB.cpp  MeshMakerIO.cpp  PolyMaker.cpp  QuickView.cpp  SmoothPolyData.cpp
